# g_kingdom

./: README.md  README.rst  example.env  example.testenv  pyproject.toml  tox.ini
app/: celery_app.py  config.py  extensions.py  manage.py  wsgi.py
app/api/: views.py
app/api/resources/: __init__.py  game.py  state.py  user.py
app/api/schemas/: __init__.py  game.py  state.py  user.py
app/auth/: helpers.py  views.py
app/commons/: apispec.py
app/commons/templates/: swagger.j2
app/config/: game_settings.yml
app/models/: __init__.py  blacklist.py  game.py  settings.py  state.py  user.py
app/services/: settings.py  state.py
cli/: cli.py
tests/: conftest.py  test_user.py
